tests/compile-fail/wrong_array_length.rs
use type_path::type_path;

const ITER_REPEAT_PATH: [&str; 3] = type_path!(::std::iter::repeat);

fn main() {}
