tests/compile-fail/wrong_array_length.stderr
error[E0308]: mismatched types
 --> tests/compile-fail/wrong_array_length.rs:3:37
  |
3 | const ITER_REPEAT_PATH: [&str; 3] = type_path!(::std::iter::repeat);
  |                                -    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected an array with a fixed size of 3 elements, found one with 4 elements
  |                                |
  |                                help: consider specifying the actual array length: `4`
  |
  = note: this error originates in the macro `type_path` (in Nightly builds, run with -Z macro-backtrace for more info)
